--- a/index.css
+++ b/index.css
@@ -1,9 +1,8 @@
 html,
 body {
-    margin: 5px;
-    padding: 2px;
+  margin: 5px;
+  padding: 2px;
 }
-
-header1 {
-    background-color: bisque;
+#header1 {
+  background-color: bisque;
 }
